updating application name

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </a>
     &nbsp;
     <a routerLink="/">
-        Saraswati Online Judge
+        {{applicationName}}
     </a>
     &nbsp;&nbsp;&nbsp;
     <a routerLink="/ide">ide</a>
