--- a/frontend/src/app/rolling/rolling.component.html
+++ b/frontend/src/app/rolling/rolling.component.html
@@ -1,4 +1,4 @@
 <div class="rolling-wrapper">
     <img src="../../assets/headicon.png" class="rolling-logo" />
-    <span class="rolling-text">{{text}}</span>
+    <span class="rolling-text">{{applicationName}}</span>
 </div>
